--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,13 @@ environment:
 dependencies:
   # path: ^1.8.0
   collection: ^1.18.0
+  uuid: ^4.4.2
+  json_annotation: ^4.9.0
+
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
   lints: ^2.0.0
   test: ^1.21.0
+  
