--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
   collection: ^1.18.0
   uuid: ^4.4.2
   json_annotation: ^4.9.0
+  freezed: ^2.5.8
+  flutter_bloc: ^9.0.0
 
 
 dev_dependencies:
   build_runner: ^2.4.9
-  json_serializable: ^6.8.0
   lints: ^2.0.0
   test: ^1.21.0
+  freezed_annotation: ^2.4.4
   
